Fixed Overflow Issue

--- a/css/modal.css
+++ b/css/modal.css
@@ -22,7 +22,8 @@
   height: 30px;
   z-index: 1;
   cursor: pointer;
-  background: #fff
+  background:
+    #fff
     url(https://web.archive.org/web/20140225205601im_/http://images.apple.com/v/your-verse/a/images/close.png)
     no-repeat 0 0;
   background-size: 30px 60px;
